uprava meta pro telefon

--- a/src/AppBundle/Resources/views/base.html.twig
+++ b/src/AppBundle/Resources/views/base.html.twig
@@ -2,7 +2,8 @@
 <html>
     <head>
         <meta charset="UTF-8" />
-        <title>{% block title %}Welcome!{% endblock %}</title>
+        <title>{% block title %}GOWOOD - dřevěné doplňky{% endblock %}</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         {% block stylesheets %}
             <link rel="stylesheet" href="{{ asset('css/styles.css') }}" />
         {% endblock %}
