--- a/src/AppBundle/Resources/views/base.html.twig
+++ b/src/AppBundle/Resources/views/base.html.twig
@@ -61,6 +61,14 @@
                                 <a href="mailto:info@gowood.cz"><span><i class="fas fa-envelope"></i>
                             info@gowood.cz</span></a></div>
                         </div>
+                        <div class="row search-button">
+                            <div class="col-6"><input class="search" type="text" /></div>
+                            <div class="col-3">&nbsp;</div>
+                            <div class="col-3" align="center">
+                                <button class="btn btn-link btn-menu-toggle d-md-none p-0 ml-3" type="button" data-toggle="collapse" data-target="#bd-docs-nav" aria-controls="bd-docs-nav" aria-expanded="false" aria-label="Toggle docs navigation"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 30" width="30" height="30" focusable="false"><title>Menu</title><path stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-miterlimit="10" d="M4 7h22M4 15h22M4 23h22"></path></svg>
+                                </button>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -112,6 +120,7 @@
 
         {% block javascripts %}
             <script src="{{ asset('js/jquery.min.js') }}"></script>
+            <script src="{{ asset('js/main.js') }}"></script>
             <script src="{{ asset('js/editor.js') }}"></script>
         {% endblock %}
     </body>
