responzivni horni menu

--- a/src/AppBundle/Resources/views/base.html.twig
+++ b/src/AppBundle/Resources/views/base.html.twig
@@ -52,7 +52,7 @@
                     <div class="cart col-md-4 col-sm-6 col-6 ml-auto d-md-block header-cart-box">
                         {% include 'AppBundle:ShopCart/boxes:head-cart.html.twig' %}
                     </div>
-                    <div class="col-12 d-sm-block d-md-none search-contact">
+                    <div class="col-12 d-block d-sm-block d-md-none search-contact">
                         <div class="contact row">
                             <div class="col-6 phone">
                                 <a href="tel:+420728870246" title="Telefon"><span><i class="fas fa-phone"></i> +420728870246</span></a>
