levy panel - facebook

--- a/src/AppBundle/Resources/public/less/gowood.less
+++ b/src/AppBundle/Resources/public/less/gowood.less
@@ -16,6 +16,12 @@ body {
 // http://bg.siteorigin.com/
 
 
+  @media (max-width: @sm-max) {
+    .left-panel-facebook {
+      display: none;
+    }
+  }
+
 header {
 
   //
