--- a/src/AppBundle/Resources/views/ShopCatalog/leftPanel.html.twig
+++ b/src/AppBundle/Resources/views/ShopCatalog/leftPanel.html.twig
@@ -2,4 +2,6 @@
     'AppBundle:ShopCatalog:categories'
 )) }}
 
-<div class="fb-page" data-href="https://www.facebook.com/gowoodcz" data-tabs="timeline" data-width="300" data-height="120" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/gowoodcz" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/gowoodcz">Gowood</a></blockquote></div>
+<div class="left-panel-facebook">
+    <div class="fb-page" data-href="https://www.facebook.com/gowoodcz" data-tabs="timeline" data-width="300" data-height="120" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/gowoodcz" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/gowoodcz">Gowood</a></blockquote></div>
+</div>
