--- a/src/AppBundle/Resources/public/less/gowood.less
+++ b/src/AppBundle/Resources/public/less/gowood.less
@@ -26,10 +26,10 @@ header {
 
   //
 
-  border-bottom: solid #aaa 4px;
+  border-bottom: solid @dark-bg 4px;
 
   .separator {
-    border-top: solid #aaa 1px;
+    border-top: solid @dark-bg 1px;
   }
 
   .row {
@@ -41,7 +41,11 @@ header {
   }
 
 
-
+  .header-customer {
+    color: #888;
+    font-size:  0.9rem;
+    margin-bottom: 15px;
+  }
 
   .search-contact {
 
@@ -114,7 +118,7 @@ header {
         right: 0;
         top: 0;
         padding: 0px 10px;
-        background-color: #555;
+        background-color: @dark-bg;
         font-weight: bold;
         color: #fff;
         font-size: 13px;
@@ -302,7 +306,7 @@ section#content {
 
 .product-item-list {
   h2 {
-    font-size: 26px;
+    font-size: 2.5em;
     margin: 20px 0;
     text-transform: uppercase;
   }
@@ -357,6 +361,12 @@ section#content {
   }
 
   .box-category {
+
+    .title {
+      font-weight: bold;
+      margin-bottom: 15px;
+    }
+
     ul {
       margin-left: 0;
       padding-left: 0;
@@ -369,7 +379,7 @@ section#content {
           // border-radius: 3px;
           display: block;
           // background: #b19780 url('/images/d9189407.png');
-          background: #555;
+          background: @dark-bg;
           // background: #3e260c;
           padding: 8px 0 9px 10px;
           border: 0 none !important;
@@ -391,7 +401,7 @@ section#content {
         a:hover {
           color: #fff;
           // background: #b19780 url('/images/68e63ac4.png');
-          background: #777;
+          background: #000;
         }
       }
     }
@@ -403,3 +413,5 @@ section#content {
 @import "cart.less";
 
 @import "preview.less";
+
+@import "page.less";
