--- a/src/AppBundle/Resources/views/ShopCart/customer.html.twig
+++ b/src/AppBundle/Resources/views/ShopCart/customer.html.twig
@@ -9,6 +9,38 @@
 
         <h3><i class="fas fa-money-check-alt"></i> Fakturační údaje</h3>
 
+        {% if not is_granted('IS_AUTHENTICATED_FULLY') %}
+        <div class="login-box" align="center">
+            <p>Máte u nás účet, <a class="show-form" href="{{ path('login') }}">přihlaste se</a>.</p>
+            <div class="login-box-form box-shaddow" style="display: none;">
+                <form id="login" action="{{ path('login_ajax') }}">
+                    <div class="login-error row">
+                        <div class="col-md-12">
+                            Neplatné přihlášení. Pokud již neznáte přihlašovací jméno a heslo, můžete si ho nechat <a href="{{ path('reset_password_request') }}">zaslat na e-mail</a>.
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-2">
+                            Email:
+                        </div>
+                        <div class="col-md-4">
+                            <input class="form-control" required id="username" type="email" name="username" />
+                        </div>
+                        <div class="col-md-1">
+                            Heslo:
+                        </div>
+                        <div class="col-md-3">
+                            <input class="form-control" required id="password" type="password" />
+                        </div>
+                        <div class="col-md-1">
+                            <input class="btn btn-success" type="submit" value="Přihlásit" />
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+        {% endif %}
+
         <form action="{{ path('shop_customer') }}" method="POST" novalidate>
 
         {{ form_widget(billingForm._token) }}
@@ -161,10 +193,10 @@
             </div>
         </div>
 
-        {#
+        {% if not is_granted('IS_AUTHENTICATED_FULLY') %}
         <h3><i class="fas fa-user"></i></i> Účet u GOWOOD</h3>
 
-        <div style="border: solid #999 1px; border-radius: 5px; padding: 20px;">
+        <div class="create-account box-shaddow">
             <div class="row">
                 <div class="col-md-12">
                     {{ form_widget(billingForm.is_create_account) }}
@@ -189,13 +221,25 @@
                 <div class="col-md-2">
 
                 </div>
-                <div class="col-md-10">
+                <div class="col-md-10 password-info">
                     Vaše heslo u nás bude bezpečně uložené v zašifrované podobě. Nikdo k němu nebude mít přístup.
                 </div>
             </div>
 
         </div>
-        #}
+        {% endif %}
+
+        <h3><i class="fas fa-pen"></i></i> Poznámky k objednávce</h3>
+
+        <div class="order-note box-shaddow">
+            <div class="row">
+                <div class="col-md-12">
+                    {{ form_widget(billingForm.order_note) }}
+                </div>
+            </div>
+        </div>
+
+
         {#{ form_widget(passwordForm) }#}
         <div class="continue">
             <a class="link" href="{{ path('shop_cart') }}"><i class="fas fa-chevron-left"></i> Zpět k dopravě a platbě</a>
@@ -233,5 +277,7 @@
 
 {% block javascripts %}
     {{ parent() }}
+    <script src="{{ asset('js/jqueryvalidation/jquery.validate.min.js') }}"></script>
+    <script src="{{ asset('js/jqueryvalidation/localization/messages_cs.js') }}"></script>
     <script src="{{ asset('js/customer.js') }}"></script>
 {% endblock %}
