--- a/src/AppBundle/Resources/views/ShopCatalog/index.html.twig
+++ b/src/AppBundle/Resources/views/ShopCatalog/index.html.twig
@@ -2,6 +2,15 @@
 
 {% block body %}
 
+  <div class="row">
+      <div class="col-md-2"></div>
+      <div class="col-md-8">
+          <p style="text-align: center; font-size: 1.1em;">Vyrábíme originální dřevené dekorace a doplňky, u kterých si sami můžete říct, jak mají vypadat. Můžete udělat radost sobě nebo dárkem někomu, kdo si to zaslouží :)</p>
+          <p style="text-align: center;">Nejsme plátci DPH a uvedené ceny jsou konečné.</p>
+      </div>
+      <div class="col-md-2"></div>
+  </div>
+
   <div class="categories-list row">
     {% for category in categories %}
         <div class="col-md-4">
@@ -13,6 +22,48 @@
             </div>
         </div>
     {% endfor %}
+  </div>
+  <div class="row">
+      <div class="col-md-12">
+          <br />
+          <h2 style="text-align: center;">Naše výrobky</h2>
+          <br />
+      </div>
+
+      <div class="col-md-4">
+              <a class="fancybox" data-fancybox="images" href="/data/reference/hodiny_manchester.jpg">
+                  <img width="100%" src="{{ '/data/reference/hodiny_manchester.jpg' | imagine_filter('reference') }}" alt="Hodiny" />
+              </a>
+       </div>
+      <div class="col-md-4">
+          <a class="fancybox" data-fancybox="images" href="/data/reference/napis_svatba.jpg">
+              <img width="100%" src="{{ '/data/reference/napis_svatba.jpg' | imagine_filter('reference') }}" alt="Hodiny" />
+          </a>
+      </div>
+      <div class="col-md-4">
+          <a class="fancybox" data-fancybox="images"   href="/data/reference/ramecek_svatba.jpg">
+              <img width="100%" src="{{ '/data/reference/ramecek_svatba.jpg' | imagine_filter('reference') }}" alt="Hodiny" />
+          </a>
+      </div>
+  </div>
+  <br />
+  <div class="row">
+      <div class="col-md-4">
+          <a class="fancybox" data-fancybox="images" href="/data/reference/medaile_tabor.jpg">
+              <img width="100%" src="{{ '/data/reference/medaile_tabor.jpg' | imagine_filter('reference') }}" alt="Hodiny" />
+          </a>
+      </div>
+      <div class="col-md-4">
+          <a class="fancybox" data-fancybox="images" href="/data/reference/pametni_erb.jpg">
+              <img width="100%" src="{{ '/data/reference/pametni_erb.jpg' | imagine_filter('reference') }}" alt="Hodiny" />
+          </a>
+      </div>
+      <div class="col-md-4">
+          <a class="fancybox" data-fancybox="images" href="/data/reference/ramecek_happy_days.jpg">
+              <img width="100%" src="{{ '/data/reference/ramecek_happy_days.jpg' | imagine_filter('reference') }}" alt="Hodiny" />
+          </a>
+      </div>
+      </div>
   </div>
 
 {#
@@ -33,4 +84,9 @@
  </div>
  #}
     {#<i class="fab fa-accessible-icon"></i>#}
+{% endblock %}
+
+{% block javascripts %}
+    {{ parent() }}
+    <script src="{{ asset('js/jquery.fancybox.min.js') }}"></script>
 {% endblock %}
