oprava emailu, text po dokonceni objednavky

--- a/src/AppBundle/Resources/views/ShopCart/finishConfirm.html.twig
+++ b/src/AppBundle/Resources/views/ShopCart/finishConfirm.html.twig
@@ -3,8 +3,14 @@
 {% block body %}
 <div class="summary row">
 
-    <div class="col-md-12">
-        <h3>Přehled objednávky</h3>
+    <div class="col-md-12" align="center">
+        <h3>Děkujem. Objednávka byla přijata.</h3>
+
+        <p>Budeme Vás informovat o dokončení výroby a předání objednávky dopravci.</p>
+
+        <p>Přejeme hezký den :)</p>
+
+        <p>GOWOOD</p>
     </div>
 
 </div>
