kontaktni formular, platba gopay

--- a/src/AppBundle/Resources/public/less/general.less
+++ b/src/AppBundle/Resources/public/less/general.less
@@ -41,6 +41,22 @@ body {
   color: @dark-text;
 }
 
+.align-center {
+  text-align: center;
+}
+
+.margin {
+  margin: 40px 0;
+}
+
+.margin30 {
+  margin: 30px 0;
+}
+
+.text-big {
+  font-size: 20px;
+}
+
 a {
   color: @link-color;
 }
@@ -71,6 +87,12 @@ footer {
   }
 }
 
+
+#modal {
+  #modal-content {
+    padding: 30px;
+  }
+}
 
 .divider {
 
