--- a/src/AppBundle/Resources/public/less/page.less
+++ b/src/AppBundle/Resources/public/less/page.less
@@ -8,3 +8,37 @@
     margin-top: 40px;
   }
 }
+
+.about {
+
+  small {
+    display: block;
+    font-size: 0.5em;
+  }
+
+  h2 {
+    color: #f60;
+    font-size: 25px;
+    text-transform: uppercase;
+    margin-bottom: 30px;
+    font-weight: bold;
+    margin-top: 30px;
+  }
+
+  h3 {
+    font-weight: bold;
+    font-size: 22px;
+    margin-bottom: 20px;
+  }
+
+  .price {
+    color: #f60;
+    font-weight: bold;
+  }
+
+  ol {
+    li {
+      margin-bottom: 20px;
+    }
+  }
+}
