--- a/src/AppBundle/Resources/views/Email/base.html.twig
+++ b/src/AppBundle/Resources/views/Email/base.html.twig
@@ -11,6 +11,9 @@
                             <tr>
                                 <td>
 
+                                    <table width="100%" cellspacing="0" cellpadding="10" border="0"><tbody><tr><td>
+                                                <br></td></tr></tbody></table>
+
                                     <table style="border-bottom:1px solid #ececec;padding-bottom:6px" width="100%" cellspacing="0" cellpadding="0">
                                         <tbody><tr>
                                             <td align="left"><img alt="gowood.cz" src="https://www.gowood.cz/images/logo_v2.png" width="173" height="54"></td>
@@ -38,7 +41,7 @@
                             <table width="100%" cellspacing="0" cellpadding="0" border="0">
                                 <tbody><tr>
                                     <td>
-                                        <a href="https://www.alza.cz/aby-vam-slevy-uz-neutekly-art16669.htm" style="font-family:Segoe UI,Arial,Verdana;font-size:14px;color:silver" target="_blank" rel="noopener"><center><span>Podívejte se, jak neminout žádnou z našich slevových akcí.</span></center></a>
+                                        {#<a href="https://www.alza.cz/aby-vam-slevy-uz-neutekly-art16669.htm" style="font-family:Segoe UI,Arial,Verdana;font-size:14px;color:silver" target="_blank" rel="noopener"><center><span>Podívejte se, jak neminout žádnou z našich slevových akcí.</span></center></a>#}
                                     </td>
                                 </tr>
                                 <tr style="height:10px;line-height:10px">
