--- a/src/AppBundle/Resources/views/Page/contact.html.twig
+++ b/src/AppBundle/Resources/views/Page/contact.html.twig
@@ -8,7 +8,7 @@
     <div class="article row">
         <div class="col-md-3"></div>
         <div class="col-md-4">
-            <strong>Zákaznická linka:</strong>+420 728 870 246<br />
+            <strong>Zákaznická linka: </strong>+420 728 870 246<br />
             <strong>E-mail:</strong> <a href="mailto:info@gowood.cz">info@gowood.cz</a><br /><br />
 
             <strong>Bankovní spojení:</strong><br />
@@ -30,7 +30,19 @@
             IČ 75250136
         </div>
         <div class="col-md-1"></div>
+
     </div>
+
+    <h1>Napište nám</h1>
+
+    <div class="article row">
+        <div class="col-md-3"></div>
+        <div class="col-md-6">
+            {{ render(controller('AppBundle:Contact:form')) }}
+        </div>
+        <div class="col-md-3"></div>
+    </div>
+
 
     </div>
 
