--- a/src/AppBundle/Resources/views/Page/for_companies.html.twig
+++ b/src/AppBundle/Resources/views/Page/for_companies.html.twig
@@ -7,8 +7,8 @@
 
     <div class="article row">
         <div class="col-md-2"></div>
-        <div class="col-md-8">
-
+        <div class="col-md-8 align-center">
+        Text bude doplněn 10. 11. 2018
         </div>
         <div class="col-md-2"></div>
     </div>
